# OpenGlCmake

./: CMakeLists.txt  README.md  main.cpp
include/: Camera.h  Helpers.h  LightSource.h  Mesh.h  Model.h  Texture.h  VBO.h  WindowInit.h  shaderClass.h
models/box/: box.gltf
models/crate/: crate.gltf
models/cube/: cube.gltf
shaders/: default.frag  default.vert
src/: Camera.cpp  Helpers.cpp  LightSource.cpp  Main.cpp  Mesh.cpp  Model.cpp  Texture.cpp  shaderClass.cpp
